add node generator and associated tag helper

--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -4,4 +4,6 @@
     ViewData["Title"] = "Home page";
 }
 
-<pic class="img-fluid" src="growth.jpg" alt="An image depicting growth"/>
+@* <pic class="img-fluid" src="growth.jpg" alt="An image depicting growth"/> *@
+
+<picture class="img-fluid" src="growth.jpg" alt="An image depicting growth"></picture>
