--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -6,4 +6,8 @@
 
 @* <pic class="img-fluid" src="growth.jpg" alt="An image depicting growth"/> *@
 
-<picture class="img-fluid" src="growth.jpg" alt="An image depicting growth"></picture>
+<figure class="figure">
+    <picture class="img-fluid" src="growth.jpg" alt="An image depicting growth">
+        <figcaption class="figure-caption">A caption for the above image.</figcaption>
+    </picture>
+</figure>
